/**
 * 29a Encounter Terminal FSM — code owns clear; GM narrates.
 * idle → engaged → resolving → terminal → idle (ledger retained via receipts).
 */

import type { ActiveEncounter, EngineMode, GameState } from './types';

export type EncounterPhase = 'engaged' | 'resolving' | 'terminal';
export type TerminalOutcome =
  | 'escape'
  | 'victory'
  | 'defeat'
  | 'capture'
  | 'parleyResolved';

export interface EncounterClearedReceipt {
  encounterId: string;
  outcome: TerminalOutcome;
  turn: number;
  resolutionReason: string;
  engagedTurnCount: number;
  failedFleeCount: number;
  failedParleyCount: number;
  name: string;
}

export interface EncounterCaps {
  maxEngagedTurns: number;
  maxFailedFlee: number;
  maxFailedParley: number;
}

export function encounterCapsForMode(mode: EngineMode | undefined): EncounterCaps {
  if (mode === 'dnd') {
    return { maxEngagedTurns: 10, maxFailedFlee: 2, maxFailedParley: 2 };
  }
  // LitRPG default; RPG/PYOA reuse short combat caps if a combat encounter exists
  return { maxEngagedTurns: 8, maxFailedFlee: 2, maxFailedParley: 1 };
}

export function initEncounterTerminal(
  enc: ActiveEncounter,
  state: GameState,
  opts?: { forcedSpawnKey?: string; source?: string }
): ActiveEncounter {
  const caps = encounterCapsForMode(state.engineMode);
  const id =
    enc.encounterId ??
    `enc-${state.turn}-${(enc.name || 'threat').toLowerCase().replace(/[^a-z0-9]+/g, '-').slice(0, 24)}`;
  return {
    ...enc,
    encounterId: id,
    phase: enc.phase ?? 'engaged',
    startedTurn: enc.startedTurn ?? state.turn,
    engagedTurnCount: enc.engagedTurnCount ?? 0,
    failedFleeCount: enc.failedFleeCount ?? 0,
    failedParleyCount: enc.failedParleyCount ?? 0,
    maxEngagedTurns: enc.maxEngagedTurns ?? caps.maxEngagedTurns,
    maxFailedFlee: enc.maxFailedFlee ?? caps.maxFailedFlee,
    maxFailedParley: enc.maxFailedParley ?? caps.maxFailedParley,
    source: enc.source ?? opts?.source ?? 'arcDirector',
    forcedSpawnKey: enc.forcedSpawnKey ?? opts?.forcedSpawnKey,
  };
}

function isFleeIntent(input: string): boolean {
  return /\b(flee|run away|escape|retreat|withdraw|bolt)\b/i.test(input);
}

function isParleyIntent(input: string): boolean {
  return /\b(parley|negotiate|talk (?:it|them) down|surrender|truce|bargain)\b/i.test(input);
}

function isAttackIntent(input: string): boolean {
  return /\b(attack|fight|strike|press the attack|engage|slash|stab|shoot|cast)\b/i.test(input);
}

export function fleeAvailable(enc: ActiveEncounter | null | undefined): boolean {
  if (!enc || enc.phase === 'resolving' || enc.phase === 'terminal') return false;
  return (enc.failedFleeCount ?? 0) < (enc.maxFailedFlee ?? 2);
}

export function parleyAvailable(enc: ActiveEncounter | null | undefined): boolean {
  if (!enc || enc.phase === 'resolving' || enc.phase === 'terminal') return false;
  return (enc.failedParleyCount ?? 0) < (enc.maxFailedParley ?? 1);
}

function resolveForcedOutcome(enc: ActiveEncounter, reason: string): TerminalOutcome {
  if (enc.hp <= 0) return 'victory';
  if (reason === 'flee_success') return 'escape';
  if (reason === 'parley_success') return 'parleyResolved';
  if (reason === 'flee_cap' || reason === 'max_engaged') {
    // Prefer escape when flee budget exhausted (retreat edge), else victory (minimal clear)
    if ((enc.failedFleeCount ?? 0) >= (enc.maxFailedFlee ?? 2)) return 'escape';
    return 'victory';
  }
  if (reason === 'parley_cap') return 'victory';
  return 'victory';
}

export interface TickEncounterResult {
  state: GameState;
  cleared?: EncounterClearedReceipt;
  receipts: string[];
  forcedTerminal: boolean;
}

/**
 * Tick encounter FSM on accepted player input while engaged.
 * Successful flee/parley/kill clear immediately; caps force terminal.
 */
export function tickEncounterTerminal(
  state: GameState,
  playerInput: string,
  opts?: { fleeSucceeded?: boolean; enemyDead?: boolean; playerDead?: boolean }
): TickEncounterResult {
  const enc0 = state.activeEncounter;
  if (!enc0) return { state, receipts: [], forcedTerminal: false };

  let enc = initEncounterTerminal(enc0, state);
  const receipts: string[] = [];
  const input = playerInput || '';

  if (opts?.playerDead) {
    return commitClear(state, enc, 'defeat', 'player_hp_zero');
  }
  if (opts?.enemyDead || enc.hp <= 0) {
    return commitClear(state, enc, 'victory', 'enemy_hp_zero');
  }
  if (opts?.fleeSucceeded) {
    return commitClear(state, enc, 'escape', 'flee_success');
  }

  enc = {
    ...enc,
    engagedTurnCount: (enc.engagedTurnCount ?? 0) + 1,
    phase: 'engaged',
  };

  if (isFleeIntent(input)) {
    enc = { ...enc, failedFleeCount: (enc.failedFleeCount ?? 0) + 1 };
    receipts.push(`Flee attempt failed (${enc.failedFleeCount}/${enc.maxFailedFlee})`);
    if ((enc.failedFleeCount ?? 0) >= (enc.maxFailedFlee ?? 2)) {
      return commitClear(state, enc, resolveForcedOutcome(enc, 'flee_cap'), 'flee_cap');
    }
  } else if (isParleyIntent(input)) {
    enc = { ...enc, failedParleyCount: (enc.failedParleyCount ?? 0) + 1 };
    receipts.push(`Parley refused (${enc.failedParleyCount}/${enc.maxFailedParley})`);
    if ((enc.failedParleyCount ?? 0) >= (enc.maxFailedParley ?? 1)) {
      return commitClear(state, enc, resolveForcedOutcome(enc, 'parley_cap'), 'parley_cap');
    }
  } else if (isAttackIntent(input)) {
    // Soft HP pressure so long loops still reach victory without ledger combat
    const dmg = Math.max(2, Math.floor((enc.maxHp || 16) / Math.max(4, enc.maxEngagedTurns ?? 8)));
    enc = { ...enc, hp: Math.max(0, enc.hp - dmg) };
    if (enc.hp <= 0) {
      return commitClear(state, enc, 'victory', 'enemy_hp_zero');
    }
  }

  if ((enc.engagedTurnCount ?? 0) >= (enc.maxEngagedTurns ?? 8)) {
    return commitClear(state, enc, resolveForcedOutcome(enc, 'max_engaged'), 'max_engaged');
  }

  return {
    state: { ...state, activeEncounter: enc },
    receipts,
    forcedTerminal: false,
  };
}

function commitClear(
  state: GameState,
  enc: ActiveEncounter,
  outcome: TerminalOutcome,
  reason: string
): TickEncounterResult {
  const receipt: EncounterClearedReceipt = {
    encounterId: enc.encounterId ?? `enc-${state.turn}`,
    outcome,
    turn: state.turn,
    resolutionReason: reason,
    engagedTurnCount: enc.engagedTurnCount ?? 0,
    failedFleeCount: enc.failedFleeCount ?? 0,
    failedParleyCount: enc.failedParleyCount ?? 0,
    name: enc.name,
  };
  const prior = state.arcDirector?.encounterClearedReceipts ?? [];
  const statusLine = formatEncounterClearedStatus(receipt);
  return {
    state: {
      ...state,
      activeEncounter: null,
      arcDirector: {
        ...state.arcDirector,
        encounterClearedReceipts: [...prior, receipt].slice(-12),
        turnsSinceCombatReceipt: 0,
      },
    },
    cleared: receipt,
    receipts: [
      `Encounter cleared: ${enc.name} (${outcome})`,
      statusLine,
    ],
    forcedTerminal: true,
  };
}

export function formatEncounterClearedStatus(receipt: EncounterClearedReceipt): string {
  const label =
    receipt.outcome === 'escape'
      ? 'escaped'
      : receipt.outcome === 'parleyResolved'
        ? 'parley resolved'
        : receipt.outcome === 'defeat'
          ? 'defeated'
          : receipt.outcome === 'capture'
            ? 'captured'
            : 'victory';
  return `Encounter cleared: ${receipt.name} — ${label}`;
}

/** Force clear if still engaged past hard safety (eval T50 / stuck saves). */
export function forceClearIfStale(state: GameState, maxTurnSpan = 50): TickEncounterResult {
  const enc = state.activeEncounter;
  if (!enc) return { state, receipts: [], forcedTerminal: false };
  const started = enc.startedTurn ?? state.turn;
  if (state.turn - started < maxTurnSpan && (enc.engagedTurnCount ?? 0) < (enc.maxEngagedTurns ?? 8)) {
    return { state, receipts: [], forcedTerminal: false };
  }
  const ready = initEncounterTerminal(enc, state);
  return commitClear(state, ready, resolveForcedOutcome(ready, 'max_engaged'), 'stale_force_clear');
}

export function isEncounterEngaged(state: GameState): boolean {
  const p = state.activeEncounter?.phase;
  return !!state.activeEncounter && (p == null || p === 'engaged' || p === 'resolving');
}
